--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,3 +33,8 @@ jobs:
     - name: Deploy to ECS
       run: |
         aws ecs update-service --cluster ${{ secrets.ECS_CLUSTER }} --service ${{ secrets.ECS_SERVICE }} --force-new-deployment
+    - name: Log in to Amazon ECR
+  id: login-ecr
+  uses: aws-actions/amazon-ecr-login@v1
+  with:
+    region: ${{ secrets.AWS_REGION }}
